# abetterworld

./: .env  .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  abw.toml  abw_wasm_config_template.json  debug_gltf.json  makefile  template.env
.github/workflows/: rust.yml
abetterworld/: .env  Cargo.toml  build.rs
abetterworld/assets/: debug_shader.wgsl
abetterworld/src/: cache.rs  camera.rs  content.rs  coord_utils.rs  debug_shader.wgsl  download.rs  download_client.rs  errors.rs  importer.rs  input.rs  lib.rs  matrix.rs  pager copy.rs  pager.rs  rendering.rs  shader.wgsl  tile_manager.rs  tiles copy.rs  tiles.rs  tiles_priority.rs  tilesets.rs  volumes.rs
abetterworld/src/cache/: cache_lru_native.rs  cache_native.rs  cache_shared.rs  cache_wasm.rs  mod.rs  types.rs
abetterworld/src/content/: download_client.rs  importer.rs  mod.rs  pager_native.rs  pager_wasm_async.rs  tile_manager.rs  tiles.rs  tiles_priority.rs  tilesets.rs  types.rs  volumes.rs
abetterworld/src/decode/: native.cc  native.rs  types.rs  wasm.rs
abetterworld/src/dynamics/: camera.rs  dynamics.rs  orbit.rs
abetterworld/src/ffi/: draco_wrapper.cc  draco_wrapper.rs  mod.rs
abetterworld/src/helpers/: channel_native.rs  channel_wasm_async.rs  errors.rs  hash.rs  matrix.rs  mod.rs  platform.rs  wasm_thread.rs
abetterworld/src/render/: camera.rs  debug_shader.wgsl  depth_buffer.rs  input.rs  instance_buffer.rs  mod.rs  render.rs  rendering.rs  shader.wgsl  wgpu_helpers.rs
abetterworld/src/tests/: cache.rs  cache_wasm.rs  mod.rs  paging.rs
abetterworld/src/world/: world.rs
apps/android/: Cargo.toml  cbindgen.toml
apps/android/android/: .gitignore  settings.gradle.kts
apps/android/android-chatgpt/: build.gradle  local.properties  settings.gradle
apps/android/android-chatgpt/app/: build.gradle
apps/android/android-chatgpt/app/src/main/: AndroidManifest.xml
apps/android/android-chatgpt/app/src/main/java/com/example/abetterworld/: MainActivity.kt  Renderer.kt
apps/android/android/app/: build.gradle.kts
apps/android/android/app/src/androidTest/java/com/jarxconcepts/abetterworld/: ExampleInstrumentedTest.kt
apps/android/android/app/src/main/: AndroidManifest.xml
apps/android/android/app/src/main/cpp/: CMakeLists.txt
apps/android/android/app/src/main/java/com/jarxconcepts/abetterworld/: MainActivity.kt  Renderer.kt
apps/android/android/app/src/main/res/layout/: activity_main.xml
apps/android/android/app/src/main/res/values/: strings.xml  themes.xml
apps/android/android/app/src/main/res/values-night/: themes.xml
apps/android/android/app/src/test/java/com/jarxconcepts/abetterworld/: ExampleUnitTest.kt
apps/android/android/gradle/: libs.versions.toml
apps/android/android/gradle/wrapper/: gradle-wrapper.properties
apps/android/src/: lib.rs  logging.rs
apps/desktop/: Cargo.toml  build.rs
apps/desktop/src/: main.rs
apps/ios/: Cargo.toml  cbindgen.toml
apps/ios/ABetterWorld/ABetterWorld/: ABWGestureController.swift  ABetterWorldView.swift  AppDelegate.swift  ViewController.swift  abetterworld-Bridging-Header.h  abetterworld.h
apps/ios/ABetterWorld/ABetterWorld.xcodeproj/: project.pbxproj
apps/ios/ABetterWorld/ABetterWorld.xcodeproj/project.xcworkspace/xcuserdata/andrewtosh.xcuserdatad/: UserInterfaceState.xcuserstate
apps/ios/src/: lib.rs  logging.rs
apps/web/: Cargo.toml  build.rs  index.html
apps/web/src/: lib.rs
bindings/android/: Cargo.toml
bindings/android/src/: lib.rs
bindings/ios/: Cargo.toml
bindings/ios/src/: lib.rs
bindings/web/: Cargo.toml
bindings/web-pager/: Cargo.toml
bindings/web-pager/src/: lib.rs
bindings/web/src/: lib.rs
crates/abetterworld/: Cargo.toml  build.rs
crates/abetterworld/assets/: shader.wgsl
crates/abetterworld/js/: draco-wrapper.js  package-lock.json  tsconfig.json
crates/abetterworld/js/src/: draco-client.ts  draco-wrapper.ts  types.ts
crates/abetterworld/scripts/: update_draco.sh
crates/abetterworld/src/: lib.rs
crates/abetterworld/src/cache/: cache_lru_wasm.rs  cache_native.rs  cache_shared.rs  cache_wasm.rs  mod.rs
crates/abetterworld/src/content/: download.rs  download_client.rs  import_renderables.rs  importer.rs  mod.rs  pager.rs  pager_native.rs  pager_state.rs  pager_wasm_async.rs  tile_manager.rs  tiles.rs  tiles_priority.rs  tilesets.rs  types.rs  volumes.rs
crates/abetterworld/src/decode/: mod.rs  native.rs  types.rs  wasm.rs
crates/abetterworld/src/dynamics/: camera.rs  dynamics.rs  helper.rs  input_manager.rs  mod.rs  orbit.rs
crates/abetterworld/src/helpers/: async_helper.rs  channel_native.rs  channel_wasm_async.rs  coord_utils.rs  frame_clock.rs  logging.rs  matrix.rs  mod.rs  profiler.rs  thread_helper.rs
crates/abetterworld/src/render/: depth_buffer.rs  import_renderables.rs  instance_buffer.rs  mod.rs  render.rs  scene_graph.rs  types.rs  wgpu_helpers.rs
crates/abetterworld/src/tests/: cache_wasm.rs  dynamics.rs  mod.rs  paging.rs
crates/abetterworld/src/world/: auto_tour.rs  config.rs  config_loader.rs  mod.rs  world.rs
data_debug/: 4080366986236197496.json
examples/android/app/src/main/: AndroidManifest.xml
examples/android/app/src/main/java/com/jarxconcepts/abetterworld/: Renderer.kt
examples/android/gradle/: libs.versions.toml
examples/desktop/: Cargo.toml
examples/desktop/src/: main.rs  test_control.rs
examples/ios/ABetterWorld/: ABetterWorldView.swift  SceneDelegate.swift  abetterworld_ios.h
examples/ios/ABetterWorld.xcodeproj/: project.pbxproj
examples/ios/ABetterWorld.xcodeproj/project.xcworkspace/xcuserdata/andrewtosh.xcuserdatad/: UserInterfaceState.xcuserstate
examples/ios/ABetterWorld.xcodeproj/xcuserdata/andrewtosh.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
examples/ios/ABetterWorld.xcodeproj/xcuserdata/andrewtosh.xcuserdatad/xcschemes/: xcschememanagement.plist
examples/web/: index.html
