[workspace]
resolver = "2"
members = [
    "abetterworld",
    "apps/web",
    "apps/desktop"
]


[workspace.dependencies]
winit = { version = "0.29", features = ["android-native-activity"] }
wgpu = {version = "25.0.2", features = ["webgpu"]}
console_error_panic_hook = "0.1.7"
console_log = "0.2"
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
wasm-bindgen-test = "0.3"