[workspace]
resolver = "2"
members = [
    "crates/abetterworld",

    "examples/desktop",

    "bindings/web",
    "bindings/ios",
    "bindings/android"
]


[workspace.dependencies]
winit = { version = "0.30", features = ["android-native-activity"] }
wgpu = {version = "26.0.1", features = ["webgpu", "vulkan", "gles"]}

console_log = "1.0"
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
wasm-bindgen-test = "0.3"
tracing = { version = "0.1", features = ["log"] }