[package]
name = "abetterworld"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
bytemuck = { version = "1.10", features = ["derive"] }
cgmath = "0.18"
wgpu = {version = "25.0.2", features = ["webgpu"]}
reqwest = { version = "0.11", features = ["json", "gzip", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2"
byteorder = "1.4"
image = "0.24"
bytes = "1"
dashmap = "5"
once_cell = "1"
urlencoding = "2"
sha2 = "0.10"
hex = "0.4"
futures = "0.3"
threadpool = "1"
wasm-bindgen-futures = "0"
log = "0.4"
async-recursion = "1.0"
thiserror = "2.0.12"
moka = { version = "0.12", features = ["sync"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
crossbeam-channel = "0.5"
num_cpus = "1.17.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt", "time"] }
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "console", "Window", "Storage"] }
idb = "0.6"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
console_log = "1.0"
futures-util = "0.3"

[features]
paging_test = []

[build-dependencies]
cc = "1.0"

