[package]
name = "desktop"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
wgpu = {version = "25.0.2"}
pollster = "0.2"
env_logger = "0.10"
abetterworld = { path = "../../abetterworld" }
winit = { version = "0.29", features = ["android-native-activity"] }
log = "0.4"
dotenv = "0"

[build-dependencies]
cc = "1.0"
