[package]
name = "web_app"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib"]

[dependencies]
wgpu = {workspace = true}
web-sys = { version = "0.3.74", features = [
    "default",
    "Document",
    "Navigator",
    "Node",
    "NodeList",
    "HtmlCanvasElement",
    "OffscreenCanvas",
    "ImageBitmap",
    "ImageBitmapRenderingContext",
    "Window",
    "WorkerGlobalScope",
    "WorkerNavigator",
    # Needed by webgpu_sys
    "Event",
    "EventTarget",
] }
pollster = "0.2"
wasm-bindgen = "0.2.97"
wasm-bindgen-futures = "0.4.45"
wasm-bindgen-test = "0.3"
console_error_panic_hook = "0.1"
abetterworld = { path = "../../abetterworld" }

[build-dependencies]
cc = "1.0"