[workspace]

[package]
name = "web_app"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib"]

[dependencies]
winit = { version = "0.29", features = ["android-native-activity"] }
wgpu = {version = "25.0.2", features = ["webgpu"]}
web-sys = { version = "0.3", features = [
    "default",
    "Document",
    "Navigator",
    "Node",
    "NodeList",
    "HtmlCanvasElement",
    "HtmlElement",
    "OffscreenCanvas",
    "ImageBitmap",
    "ImageBitmapRenderingContext",
    "Window",
    "WorkerGlobalScope",
    "WorkerNavigator",
    "CssStyleDeclaration",
    # Needed by webgpu_sys
    "Event",
    "EventTarget",
    "console"
] }
pollster = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
wasm-bindgen-spawn = { version = "0", features = ["async"] }
console_error_panic_hook = "0.1"
abetterworld = { path = "../../abetterworld" }
log = "0.4"
console_log = "1.0"

[build]
target = "wasm32-unknown-unknown"