[package]
name = "abw_android"
version = "0.1.0"
edition = "2021"
description = "A Better World renderer for Android"

[lib]
name = "abw_android"
crate-type = [ "cdylib"]

[dependencies]
wgpu = {version = "26.0.1", features = ["webgpu"]}
winit = { workspace = true }
abetterworld = { path = "../../crates/abetterworld" }
tracing = { workspace = true }
log = "0.4"
jni = "0.21"
futures = "0.3"
android_log-sys = "0.3"
ndk = "0.9"
pollster = "0.4" 
raw-window-handle = "=0.6.2"
