[package]
name = "abw_ios"
version = "0.1.0"
edition = "2021"
description = "A Better World renderer for iOS using wgpu with Metal backend"

[lib]
name = "abw_ios"
crate-type = ["staticlib", "cdylib"]

[dependencies]
wgpu = { workspace = true }
winit = { workspace = true }
abetterworld = { path = "../../crates/abetterworld" }
log = "0.4"
env_logger = "0.11"
pollster = "0.4"
cfg-if = "1.0"
objc = "0.2"
cocoa-foundation = "0.2"
foreign-types = "0.5"
metal = "0.32"
core-graphics = "0.25"
raw-window-handle = "0.6.2"
ctrlc = "3.4"
cocoa = "0.26"

[features]
metal = ["wgpu/metal"]
default = ["metal"] 
