[package]
name = "abw_example_desktop"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
wgpu = { workspace = true }
pollster = "0.4"
env_logger = "0.11"
abetterworld = { path = "../../crates/abetterworld" }
winit = { workspace = true }
log = "0.4"
dotenv = "0"

[build-dependencies]
cc = "1.2"
